[tool.poetry]
name = "wildfire"
version = "0.1.0"
description = ""
authors = ["DaviGuanabara <davi_guanabara@live.com>"]
readme = "README.md"

packages = [
    { include = "wildfire_private" }
]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.0"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
gymnasium = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
