[tool.poetry]
name = "wildfire_pyro"
version = "0.1.0"
description = ""
authors = ["DaviGuanabara <davi_guanabara@live.com>"]
readme = "README.md"

packages = [
    { include = "wildfire_pyro", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
torch = "^2.5.0"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
gymnasium = "^1.0.0"
pytest = "^8.3.4"
tqdm = "^4.67.1"
rich = "^13.9.4"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
tensorboard = "^2.19.0"
openpyxl = "^3.1.5"
h5py = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
